# Lab1

./: CMakeLists.txt
Lab1/: CMakeLists.txt  Lab1.cpp  Lab1.h
